style: cleanup file format